update information and fix regex bug on safari

--- a/src/Components/Menu/main.less
+++ b/src/Components/Menu/main.less
@@ -105,6 +105,7 @@ menu {
 					font-weight: bold;
 					font-size: 1rem;
 					cursor: pointer;
+					white-space: nowrap;
 				}
 			}
 
